# agents-play

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  justfile  main.py  package.json  pnpm-lock.yaml  pyproject.toml  rsbuild.config.ts  tsconfig.json
.devcontainer/: .zshrc  Dockerfile  devcontainer.json  docker-compose.code.yml  justfile
docker/: docker-compose.services.yml
frontend/: App.css  App.tsx  index.tsx
frontend/common/api/: client.ts
frontend/common/errors/: api.ts
frontend/data-providers/: data-providers.tsx  theme-provider.tsx
frontend/llm/: hooks.ts  schemas.ts
frontend/llm/api/: client.ts  hooks.ts
frontend/pages/: home-page.css  home-page.tsx
server/agents_play/: main.py
server/app_api/: router.py
server/auth/: conf.py  controller.py  exceptions.py  middleware.py  models.py  router.py  schemas.py
server/auth/utils/: jwt_utils.py  user.py
server/common/: conf.py  datetime_utils.py  exceptions.py  schemas.py
server/database/: conf.py  database.py
server/foreign_exchange/: conf.py  graph.py  prompts.py  tools.py
server/health/: router.py
server/llm/: controller.py  graph.py  models.py  router.py  schemas.py  tools.py
server/todos/: graph.py  models.py  schemas.py
src/agents_play/: conf.py  main.py
src/common/: conf.py
src/foreign_exchange/: client.py  conf.py  currencies.py  responses.py
