[project]
name = "agents-play"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp[speedups]>=3.12.14",
    "langchain-core>=0.3.68",
    "langchain[openai]>=0.3.26",
    "langgraph[openai]>=0.5.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["server/agents_play", "server/foreign_exchange", "server/common"]

[dependency-groups]
dev = ["mypy>=1.16.1", "pre-commit>=4.2.0", "ruff>=0.12.3"]

[tool.mypy]
mypy_path = "server"
packages = ["agents_play", "foreign_exchange", "common"]
python_version = "3.13"
strict = true
namespace_packages = true
explicit_package_bases = true
