[project]
name = "agents-play"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp[speedups]>=3.12.14",
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.116.1",
    "langchain-core>=0.3.68",
    "langchain[openai]>=0.3.26",
    "langgraph[openai]>=0.5.2",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "pydantic-extra-types>=2.10.5",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.41",
    "sqlalchemy-utils>=0.41.2",
    "sqlmodel>=0.0.24",
    "types-pytz>=2025.2.0.20250516",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = [
    "server/agents_play",
    "server/foreign_exchange",
    "server/common",
    "server/auth",
    "server/health",
    "server/app_api",
    "server/database",
]

[dependency-groups]
dev = ["mypy>=1.16.1", "pre-commit>=4.2.0", "ruff>=0.12.3"]

[tool.mypy]
mypy_path = "server"
packages = [
    "agents_play",
    "foreign_exchange",
    "common",
    "auth",
    "health",
    "app_api",
    "database",
]
python_version = "3.13"
strict = true
namespace_packages = true
explicit_package_bases = true
